// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "google/type/date.proto";
import "wfa/measurement/internal/kingdom/exchange_step_attempt_details.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Each attempt to execute an `ExchangeStep` is stored.
message ExchangeStepAttempt {
  // External identifier of the `RecurringExchange` that contains this.
  fixed64 external_recurring_exchange_id = 1;

  // Date of the `Exchange`. For any given `external_recurring_exchange_id`
  // there is at most one `Exchange` for any given date -- this is part of the
  // `Exchange`'s primary key.
  google.type.Date date = 3;

  // Which step this is (indexing into the `RecurringExchange`'s
  // `ExchangeWorkflow`).
  int32 step_index = 4;

  // Which attempt this is. The first attempt should have index 1 and each
  // subsequent attempt should increase the last `attempt_number` by 1.
  // Output-only.
  int32 attempt_number = 5;

  // Additional metadata about the ExchangeStepAttempt.
  ExchangeStepAttemptDetails details = 6;

  enum State {
    STATE_UNSPECIFIED = 0;

    // The attempt has not yet reached a terminal state.
    ACTIVE = 1;

    // The attempt has succeeded. There cannot be more attempts for the step.
    // Terminal state.
    SUCCEEDED = 2;

    // The attempt has failed. The step should be retried. Terminal state.
    FAILED = 3;

    // The attempt has failed permanently and the step should not be retried.
    // Terminal state.
    FAILED_STEP = 4;
  }

  // State of the ExchangeStepAttempt.
  State state = 7;

  // Serialized ExchangeWorkflow message denormalized from the ancestor
  // `RecurringExchange`'s `RecurringExchangeDetails`. Output-only.
  bytes serialized_recurring_exchange = 8;
}
